Agrego estilos CSS

--- a/index.html
+++ b/index.html
@@ -9,27 +9,26 @@
   <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
-  <header>
-    <div>
-        <img src="img/logo.jpeg" alt="Punto.Home">
-    </div>
-    <nav>
-      <ul class="menu">
-        <li><a href="index.html">Inicio</a></li>
-        <li><a href="qsomos.html">Quienes Somos</a></li>
-        <li><a href="mayorista.html">Venta Mayorista</a></li>
-        <li><a href="cambios.html">Política de Cambios y Devoluciones</a></li>
-        <li><a href="contacto.html">Contacto</a></li>
-      </ul>
-    </nav>
-  </header>
-  <section>
-    <h3>P|H - Punto Home</h3>
-    <p>Calle 1 N° 1850 - Tandil - Pcia. de Buenos Aires || Tel 2494-673779 || e-mail: larisma.s@gmail.com</p>
-  </section>
-  <footer>
-    <p><img src="img/ig_logo.png" class="logo"> instagram.com/punto.home</p>
-    <p><img src="img/wapp_logo.png" class="logo"> (249) 15-4673779</p>
-  </footer>
+	<header>
+	    <div>
+            <img src="img/logo.jpeg" alt="Punto.Home">
+	    </div>
+	    <nav>
+	        <ul class="menu">
+	            <li><a href="#">Boton 1</a></li>
+	            <li><a href="#">Boton 2</a></li>
+	            <li><a href="#">Boton 3</a></li>
+	            <li><a href="#">Boton 4</a></li>
+	            <li><a href="#">Boton 5</a></li>
+	        </ul>
+	    </nav>
+	</header>
+
+    <section>
+    	<section>
+    		<h3>P|H - Punto Home</h3>
+    		<p>Calle 1 N° 1850 - Tandil - Pcia. de Buenos Aires || Tel 2494-673779 || e-mail: larisma.s@gmail.com</p>
+        </section>
+    </section>
 </body>
 </html>	
