Agrego qsomos.html y modifico index.html

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
             <img src="img/logo.jpeg" alt="Punto.Home">
 	    </div>
 	    <nav>
-	        <ul>
-	            <li><a href="#">Boton 1</a></li>
-	            <li><a href="#">Boton 2</a></li>
+	        <ul class="menu">
+	            <li><a href="index.html">Inicio</a></li>
+	            <li><a href="qsomos.html">Quienes Somos</a></li>
 	            <li><a href="#">Boton 3</a></li>
 	            <li><a href="#">Boton 4</a></li>
 	            <li><a href="#">Boton 5</a></li>
