agrego mayorista.html + modifico index.html y qsomos.html

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	        <ul class="menu">
 	            <li><a href="index.html">Inicio</a></li>
 	            <li><a href="qsomos.html">Quienes Somos</a></li>
-	            <li><a href="#">Boton 3</a></li>
+	            <li><a href="mayorista.html">Venta Mayorista</a></li>
 	            <li><a href="#">Boton 4</a></li>
 	            <li><a href="#">Boton 5</a></li>
 	        </ul>
