Mejora 2 - Agrego contacto.html y modifico los demas html

--- a/mayorista.html
+++ b/mayorista.html
@@ -19,7 +19,7 @@
               <li><a href="qsomos.html">Quienes Somos</a></li>
 	            <li><a href="mayorista.html">Venta Mayorista</a></li>
 	            <li><a href="#">Boton 4</a></li>
-	            <li><a href="#">Boton 5</a></li>
+	            <li><a href="contacto.html">Contacto</a></li>
 	        </ul>
 	    </nav>
 	</header>
