Agregue validacion en el formulario contacto

--- a/contacto.html
+++ b/contacto.html
@@ -38,11 +38,12 @@
     			<label for="mensaje">Mensaje:</label>
     			<textarea id="mensaje" name="mensaje" placeholder="Escribinos tu mensaje"></textarea>
     			
-    			<input type="submit" value="Enviar">	
+    			<input type="submit" value="Enviar" id="btnEnviar">	
     		</form>
     		<h3>P|H - Punto Home</h3>
     		<p>Calle 1 N° 1850 - Tandil - Pcia. de Buenos Aires || Tel 2494-673779 || e-mail: larisma.s@gmail.com</p>
         </section>
     </section>
+    <script type="text/javascript" src="js/validacion.js"></script>
 </body>
 </html>	
