--- a/qsomos.html
+++ b/qsomos.html
@@ -23,14 +23,15 @@
 	        </ul>
 	    </nav>
 	</header>
-
-    <section>
-    	<section>
-    		<p>Somos Valeria y Laura, dos amigas emprendedoras que en el 2019 comenzamos a soñar y a construir nuestra pequeña empresa artesanal, inspiradas en hacer del hogar nuestro lugar soñado, nos embarcamos en este camino, con principios claros desde el comienzo. Nuestros productos deben ser sustentables, reutilizables y artesanale, siempre cuidando el entorno y el ambiente, ya que tomamos muchas cosas de él, como nuestras inspiraciones.</p>
-        <p>La artesanía se concibe desde las manos, es un proceso en el que la figura humana tiene que ser fundamental para obtener el resultado final. Y ese valor artesano se puede transmitir con la decoración, siempre que los objetos que la compongan lo sean. Porque la artesanía da lugar a objetos únicos, nunca hay dos iguales. Y en decoración, aplicar eso, es muy bonito.</p>
-        <p>Creemos que todo el mundo quiere que su personalidad se vea reflejada en la decoración que da vida a su casa. Desde que sos adolescente y colgás un poster de tu artista favorito en la pared, estás buscando definir tu personalidad a través del espacio que ocupás. En nuestro caso, eso se ve reflejado especialmente en los materiales que predominan, como maderas, linos, cerámica, todos ellos naturales, nos hacen sentir en calma y aterrizada, porque son materiales vivos que evolucionan.</p>
-        <p>Estamos convencidas que lo artesanal es único, lleva un proceso especial, si bien trabajamos con productos en stock, nos caracterizamos por cumplir los deseos de nuestros clientes y amigos.</p>
-        </section>
-    </section>
+	<section>
+		<p>Somos Valeria y Laura, dos amigas emprendedoras que en el 2019 comenzamos a soñar y a construir nuestra pequeña empresa artesanal, inspiradas en hacer del hogar nuestro lugar soñado, nos embarcamos en este camino, con principios claros desde el comienzo. Nuestros productos deben ser sustentables, reutilizables y artesanale, siempre cuidando el entorno y el ambiente, ya que tomamos muchas cosas de él, como nuestras inspiraciones.</p>
+    <p>La artesanía se concibe desde las manos, es un proceso en el que la figura humana tiene que ser fundamental para obtener el resultado final. Y ese valor artesano se puede transmitir con la decoración, siempre que los objetos que la compongan lo sean. Porque la artesanía da lugar a objetos únicos, nunca hay dos iguales. Y en decoración, aplicar eso, es muy bonito.</p>
+    <p>Creemos que todo el mundo quiere que su personalidad se vea reflejada en la decoración que da vida a su casa. Desde que sos adolescente y colgás un poster de tu artista favorito en la pared, estás buscando definir tu personalidad a través del espacio que ocupás. En nuestro caso, eso se ve reflejado especialmente en los materiales que predominan, como maderas, linos, cerámica, todos ellos naturales, nos hacen sentir en calma y aterrizada, porque son materiales vivos que evolucionan.</p>
+    <p>Estamos convencidas que lo artesanal es único, lleva un proceso especial, si bien trabajamos con productos en stock, nos caracterizamos por cumplir los deseos de nuestros clientes y amigos.</p>
+  </section>
+  <footer>
+    <p><img src="img/ig_logo.png" class="logo"> instagram.com/punto.home</p>
+    <p><img src="img/wapp_logo.png" class="logo"> (249) 15-4673779</p>
+  </footer>
 </body>
-</html>	
+</html>
