archivo cambios.html subido y actualización del resto de htmls

--- a/index.html
+++ b/index.html
@@ -1,35 +1,38 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>P|H - Punto Home</title>
-  <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
-  <link rel="stylesheet" href="css/estilos.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>P|H - Punto Home</title>
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="css/estilos.css">
 </head>
+
 <body>
-  <header>
-    <div>
-        <img src="img/logo.jpeg" alt="Punto.Home">
-    </div>
-    <nav>
-        <ul class="menu">
-            <li><a href="index.html">Inicio</a></li>
-            <li><a href="qsomos.html">Quienes Somos</a></li>
-            <li><a href="mayorista.html">Venta Mayorista</a></li>
-            <li><a href="#">Boton 4</a></li>
-            <li><a href="contacto.html">Contacto</a></li>
-        </ul>
-    </nav>
-  </header>
-  <section>
-    <h3>P|H - Punto Home</h3>
-    <p>Calle 1 N° 1850 - Tandil - Pcia. de Buenos Aires || Tel 2494-673779 || e-mail: larisma.s@gmail.com</p>
-  </section>
-  <footer>
-    <p><img src="img/ig_logo.png" class="logo"> instagram.com/punto.home</p>
-    <p><img src="img/wapp_logo.png" class="logo"> (249) 15-4673779</p>
-  </footer>
+    <header>
+        <div>
+            <img src="img/logo.jpeg" alt="Punto.Home">
+        </div>
+        <nav>
+            <ul class="menu">
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="qsomos.html">Quienes Somos</a></li>
+                <li><a href="mayorista.html">Venta Mayorista</a></li>
+                <li><a href="cambios.html">Política de Cambios y Devoluciones</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
+            </ul>
+        </nav>
+    </header>
+    <section>
+        <h3>P|H - Punto Home</h3>
+        <p>Calle 1 N° 1850 - Tandil - Pcia. de Buenos Aires || Tel 2494-673779 || e-mail: larisma.s@gmail.com</p>
+    </section>
+    <footer>
+        <p><img src="img/ig_logo.png" class="logo"> instagram.com/punto.home</p>
+        <p><img src="img/wapp_logo.png" class="logo"> (249) 15-4673779</p>
+    </footer>
 </body>
-</html>		
+
+</html>
