--- a/contacto.html
+++ b/contacto.html
@@ -18,7 +18,7 @@
         <li><a href="index.html">Inicio</a></li>
         <li><a href="qsomos.html">Quienes Somos</a></li>
         <li><a href="mayorista.html">Venta Mayorista</a></li>
-        <li><a href="#">Boton 4</a></li>
+        <li><a href="cambios.html">Política de Cambios y Devoluciones</a></li>
         <li><a href="contacto.html">Contacto</a></li>
       </ul>
     </nav>
