--- a/mayorista.html
+++ b/mayorista.html
@@ -1,37 +1,40 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>P|H - Punto Home</title>
-  <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
-  <link rel="stylesheet" href="css/estilos.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>P|H - Punto Home</title>
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="css/estilos.css">
 </head>
+
 <body>
-	<header>
-    <div>
-      <img src="img/logo.jpeg" alt="Punto.Home">
-    </div>
-    <nav class="menu">
-      <ul>
-          <li><a href="index.html">Inicio</a></li>
-          <li><a href="qsomos.html">Quienes Somos</a></li>
-          <li><a href="mayorista.html">Venta Mayorista</a></li>
-          <li><a href="#">Boton 4</a></li>
-          <li><a href="contacto.html">Contacto</a></li>
-      </ul>
-    </nav>
-	</header>
+    <header>
+        <div>
+            <img src="img/logo.jpeg" alt="Punto.Home">
+        </div>
+        <nav class="menu">
+            <ul>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="qsomos.html">Quienes Somos</a></li>
+                <li><a href="mayorista.html">Venta Mayorista</a></li>
+                <li><a href="cambios.html">Política de Cambios y Devoluciones</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
+            </ul>
+        </nav>
+    </header>
     <section>
-      <p>♡ Si tenés ganas de comercializar nuestros productos, envíanos mail a larisma.s@gmail.com o WhatsApp al 2494673779 así podemos enviarte toda la info ♡</p>
-      <p>Una vez que te contactes con nosotros vas a recibir: un formulario para que completes tus datos, nuestro catálogo de productos, precios y condiciones.</p>
-      <p>Luego de recibir tu información, podés pasarnos el pedido por Kyte o armarlo junto con nuestra ayuda y asesoramiento. Acordate que podés escribirnos por WhatsApp apretando en este número 2494673779</p>
-      <p>Una vez confirmado el pedido, se envía el detalle de los productos y el costo final a abonar. ♡</p>
+        <p>♡ Si tenés ganas de comercializar nuestros productos, envíanos mail a larisma.s@gmail.com o WhatsApp al 2494673779 así podemos enviarte toda la info ♡</p>
+        <p>Una vez que te contactes con nosotros vas a recibir: un formulario para que completes tus datos, nuestro catálogo de productos, precios y condiciones.</p>
+        <p>Luego de recibir tu información, podés pasarnos el pedido por Kyte o armarlo junto con nuestra ayuda y asesoramiento. Acordate que podés escribirnos por WhatsApp apretando en este número 2494673779</p>
+        <p>Una vez confirmado el pedido, se envía el detalle de los productos y el costo final a abonar. ♡</p>
     </section>
-  <footer>
-    <p><img src="img/ig_logo.png" class="logo"> instagram.com/punto.home</p>
-    <p><img src="img/wapp_logo.png" class="logo"> (249) 15-4673779</p>
-  </footer>
+    <footer>
+        <p><img src="img/ig_logo.png" class="logo"> instagram.com/punto.home</p>
+        <p><img src="img/wapp_logo.png" class="logo"> (249) 15-4673779</p>
+    </footer>
 </body>
-</html>	
+
+</html>
