--- a/index.html
+++ b/index.html
@@ -2,37 +2,80 @@
 <html lang="es">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>P|H - Punto Home</title>
-    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="css/estilos.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>P|H - Punto Home</title>
+  <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="css/estilos.css">
 </head>
 
 <body>
-    <header>
-        <div>
-            <img src="img/logo.jpeg" alt="Punto.Home">
-        </div>
-        <nav>
-            <ul class="menu">
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="qsomos.html">Quienes Somos</a></li>
-                <li><a href="mayorista.html">Venta Mayorista</a></li>
-                <li><a href="cambios.html">Política de Cambios y Devoluciones</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
-            </ul>
-        </nav>
-    </header>
-    <section>
-        <h3>P|H - Punto Home</h3>
-        <p>Calle 1 N° 1850 - Tandil - Pcia. de Buenos Aires || Tel 2494-673779 || e-mail: larisma.s@gmail.com</p>
-    </section>
-    <footer>
-        <p><img src="img/ig_logo.png" class="logo"> instagram.com/punto.home</p>
-        <p><img src="img/wapp_logo.png" class="logo"> (249) 15-4673779</p>
-    </footer>
+  <header>
+    <div>
+      <img src="img/logo.jpeg" alt="Punto.Home">
+    </div>
+    <nav>
+      <ul class="menu">
+        <li><a href="index.html">Inicio</a></li>
+        <li><a href="qsomos.html">Quienes Somos</a></li>
+        <li><a href="mayorista.html">Venta Mayorista</a></li>
+        <li><a href="cambios.html">Política de Cambios y Devoluciones</a></li>
+        <li><a href="contacto.html">Contacto</a></li>
+      </ul>
+    </nav>
+  </header>
+  <section>
+    <h3>P|H - Punto Home</h3>
+    <p>Calle 1 N° 1850 - Tandil - Pcia. de Buenos Aires || Tel 2494-673779 || e-mail: larisma.s@gmail.com</p>
+  </section>
+  <table>
+    <thead>
+      <th>NOMBRE</th>
+      <th>DESCRIPCION</th>
+      <th>PRECIO</th>
+    </thead>
+    <tbody>
+      <tr>
+        <td>
+          <figure>
+            <img src="catalogo/1.png" alt="cat1">
+            <figcaption>ALMOHADÓN DE MACRAMÉ</figcaption>
+          </figure>
+        </td>
+        <td>
+          <ul>
+            <li>EL PRECIO PUBLICADO ES EL PRECIO UNITARIO</li>
+            <li>Medidas 50x50 CM</li>
+            <li>Producto artesanal elaborado con los siguientes materiales:
+              almohadón relleno de goma espuma + funda
+              primaria
+              de frizelina blanca + funda de tela de tapicería
+              (jacquard) que incluye el diseño en macramé cocido + cierre
+              con
+              tirador metálico.</li>
+            <li>El cordón se encuentra en su estado natural, no
+              está teñido, no mancha y no se estira.</li>
+            <li>Se puede lavar a mano con agua fría y jabón líquido
+              para la ropa o detergente.</li>
+            <li>Podemos hacer modelos distintos a los que están en
+              las fotos. Se hacen por encargo con aproximadamente
+              15 días
+              de demora como máximo.</li>
+          </ul>
+
+        </td>
+        <td>
+          $3000
+        </td>
+      </tr>
+    </tbody>
+  </table>
+
+  <footer>
+    <p><img src="img/ig_logo.png" class="logo"> instagram.com/punto.home</p>
+    <p><img src="img/wapp_logo.png" class="logo"> (249) 15-4673779</p>
+  </footer>
 </body>
 
 </html>
