Agrego logo nuevo, modificando los html y cambiando aspecto de la pagina

--- a/contacto.html
+++ b/contacto.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,43 +9,44 @@
   <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="css/estilos.css">
 </head>
+
 <body>
-	<header>
+  <header>
     <div>
-      <img src="img/logo.jpeg" alt="Punto.Home">
+      <img src="img/logo.png" alt="Punto.Home">
     </div>
-    <nav>
-      <ul class="menu">
+    <nav class="menu">
+      <ul>
         <li><a href="index.html">Inicio</a></li>
         <li><a href="qsomos.html">Quienes Somos</a></li>
-        <li><a href="mayorista.html">Venta Mayorista</a></li>
         <li><a href="cambios.html">Política de Cambios y Devoluciones</a></li>
         <li><a href="contacto.html">Contacto</a></li>
       </ul>
     </nav>
-	</header>
-	<section>
-		<h2>Dejanos un mensaje</h2>
-		<h3>Completá el formulario con tu mensaje, te contactaremos a la brevedad</h3>
-		<form>
-			<label for="nombre">Nombre y Apellido:</label>
-			<input type="text" placeholder="Escribe tu nombre" name="nombre" id="nombre">
-			
-			<label for="email">Correo electrónico:</label>
-			<input type="email" placeholder="ejemplo@email.com" name="email" id="email">
-			
-			<label for="mensaje">Mensaje:</label>
-			<textarea id="mensaje" name="mensaje" placeholder="Escribinos tu mensaje"></textarea>
-			
-			<input type="submit" value="Enviar" id="btnEnviar">	
-		</form>
-		<h3>P|H - Punto Home</h3>
-		<p>Calle 1 N° 1850 - Tandil - Pcia. de Buenos Aires || Tel 2494-673779 || e-mail: larisma.s@gmail.com</p>
+  </header>
+  <section>
+    <h2>Dejanos un mensaje</h2>
+    <h3>Completá el formulario con tu mensaje, te contactaremos a la brevedad</h3>
+    <form>
+      <label for="nombre">Nombre y Apellido:</label>
+      <input type="text" placeholder="Escribe tu nombre" name="nombre" id="nombre">
+
+      <label for="email">Correo electrónico:</label>
+      <input type="email" placeholder="ejemplo@email.com" name="email" id="email">
+
+      <label for="mensaje">Mensaje:</label>
+      <textarea id="mensaje" name="mensaje" placeholder="Escribinos tu mensaje"></textarea>
+
+      <input type="submit" value="Enviar" id="btnEnviar">
+    </form>
+    <h3>P|H - Punto Home</h3>
+    <p>Calle 1 N° 1850 - Tandil - Pcia. de Buenos Aires || Tel 2494-673779 || e-mail: larisma.s@gmail.com</p>
   </section>
   <footer>
     <p><img src="img/ig_logo.png" class="logo"> instagram.com/punto.home</p>
     <p><img src="img/wapp_logo.png" class="logo"> (249) 15-4673779</p>
   </footer>
-    <script type="text/javascript" src="js/validacion.js"></script>
+  <script type="text/javascript" src="js/validacion.js"></script>
 </body>
-</html>	
+
+</html>
