--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,16 +9,16 @@
   <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="css/estilos.css">
 </head>
+
 <body>
   <header>
     <div>
-        <img src="img/logo.jpeg" alt="Punto.Home">
+      <img src="img/logo.png" alt="Punto.Home">
     </div>
-    <nav>
-      <ul class="menu">
+    <nav class="menu">
+      <ul>
         <li><a href="index.html">Inicio</a></li>
         <li><a href="qsomos.html">Quienes Somos</a></li>
-        <li><a href="mayorista.html">Venta Mayorista</a></li>
         <li><a href="cambios.html">Política de Cambios y Devoluciones</a></li>
         <li><a href="contacto.html">Contacto</a></li>
       </ul>
@@ -32,4 +33,5 @@
     <p><img src="img/wapp_logo.png" class="logo"> (249) 15-4673779</p>
   </footer>
 </body>
-</html>	
+
+</html>
