Agrego al catalogo y al index.html el segundo producto

--- a/index.html
+++ b/index.html
@@ -69,6 +69,25 @@
           $3000
         </td>
       </tr>
+      <tr>
+        <td>
+          <figure>
+            <img src="catalogo/2.png" alt="cat2">
+            <figcaption>FUNDA NORDICA</figcaption>
+          </figure>
+        </td>
+        <td>
+          <ul>
+            <li>FUNDA PARA COLOCAR EN SU INTERIOR EDREDON O ACOLCHADO Y CONFECCIONADO EN TUSOR </li>
+            <li>CIERRA CON BOTONES DE MADERA</li>
+            <li>CONSULTAR COLORES DISPONIBLES DISPONIBLES</li>
+            <li>MEDIDA 270 x 250 aprox</li>
+            <li>ENVIOS CON CARGO POR PARTE DEL COMPRADOR</li>
+            <li>CONSULTAR STOCK Y TIEMPO DE CONFECCION 15 DIAS A PARTIR DE LA COMPRA</li>
+          </ul>
+        </td>
+        <td>$25000</td>
+      </tr>
     </tbody>
   </table>
 
