Modifico index.html y agrego la foto 5 al catalogo

--- a/index.html
+++ b/index.html
@@ -126,7 +126,37 @@
         </td>
         <td>$3000</td>
       </tr>
-
+      <tr>
+        <td>
+          <figure>
+            <img src="catalogo/5.png" alt="cat5">
+            <figcaption>VELAS DE SOJA AROMÁTICAS EN FRASCO DE VIDRIO.</figcaption>
+          </figure>
+        </td>
+        <td>
+          <ul>
+            <li>Aroma: Citronela </li>
+            <li> Frasco Grande </li>
+            <li> Diseño de macrame. </li>
+            <li>Velas 100% naturales.</li>
+            <li>La cera de soja no emite toxicos al aire, es un recurso renovable y no fomenta la industria
+              petroquímica.
+            </li>
+            <li>Duran mas tiempo que las velas convencionales y son mas seguras porque su temperatura para quemarse en
+              menor.</li>
+            <li>Podes prenderla diariamente por períodos máximos de 3 horas.</li>
+            <li>Pará apagarla, no soplar la llama, simplemente taparla.</li>
+            <li>Cortar la mecha cada tanto para promover un consumo perfecto de la cera, y para que el pabilo no ensucie
+              tu vela.</li>
+            <li>Regalate un momento especial, transforma tu ambiente en un lugar placentero y déjate llevar por los
+              aromas. </li>
+            <li>La citronela es una planta aromática muy utilizada para la extracción de la esencia del aroma a limón
+              que
+              mantiene alejados a los mosquitos.</li>
+          </ul>
+        </td>
+        <td>$2500</td>
+      </tr>
     </tbody>
   </table>
 
