Agrego foto 6 al catalogo y actualizo index.html

--- a/index.html
+++ b/index.html
@@ -157,6 +157,23 @@
         </td>
         <td>$2500</td>
       </tr>
+
+      <tr>
+        <td>
+          <figure>
+            <img src="catalogo/6.png" alt="cat6">
+            <figcaption>ENVASES DE VIDRIO O PET RECARGABLE.</figcaption>
+          </figure>
+        </td>
+        <td>
+          <ul>
+            <li>Envase 500 ml </li>
+            <li>Todas las etiquetas son vinílicas, es decir, pueden estar expuestas a humedad o agua. </li>
+            <li> Hacemos de tu casa un lugar mas lindo! </li>
+          </ul>
+        </td>
+        <td>$2500</td>
+      </tr>
     </tbody>
   </table>
 
