Agrego foto 7 y modifico index.html

--- a/index.html
+++ b/index.html
@@ -174,6 +174,23 @@
         </td>
         <td>$2500</td>
       </tr>
+
+      <tr>
+        <td>
+          <figure>
+            <img src="catalogo/7.jpeg" alt="cat7">
+            <figcaption>MANTA TEJIDO RUSTICO TIPO NIDO DE ABEJA.</figcaption>
+          </figure>
+        </td>
+        <td>
+          <ul>
+            <li>Grande: 2,60 x 1,20 Mt </li>
+            <li> Varias medidas y colores disponibles.</li>
+            <li>Producto prelavado, no se achica. Sugerimos lavar la manta con agua fria. </li>
+          </ul>
+        </td>
+        <td>$4700</td>
+      </tr>
     </tbody>
   </table>
 
