Agrego img catalogo 8 y modifico index.html

--- a/index.html
+++ b/index.html
@@ -191,6 +191,24 @@
         </td>
         <td>$4700</td>
       </tr>
+
+      <tr>
+        <td>
+          <figure>
+            <img src="catalogo/8.png" alt="cat8">
+            <figcaption>CORTINA DE GASA</figcaption>
+          </figure>
+        </td>
+        <td>
+          <ul>
+            <li>Cortina de baño confeccionada en gasa de algodón blanca, con tiras, mide 1,90 x 2,30 Aprox </li>
+            <li>Realizada de forma artesanal.</li>
+            <li>Pintada con relieve </li>
+          </ul>
+        </td>
+        <td>$3900</td>
+      </tr>
+
     </tbody>
   </table>
 
