Agrego foto 8_1 al catálogo y actualizo index.html

--- a/cambios.html
+++ b/cambios.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,8 +9,9 @@
   <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="css/estilos.css">
 </head>
+
 <body>
-	<header>
+  <header>
     <div>
       <img src="img/logo.jpeg" alt="Punto.Home">
     </div>
@@ -17,30 +19,36 @@
       <ul>
         <li><a href="index.html">Inicio</a></li>
         <li><a href="qsomos.html">Quienes Somos</a></li>
-        <li><a href="mayorista.html">Venta Mayorista</a></li>
         <li><a href="cambios.html">Política de Cambios y Devoluciones</a></li>
         <li><a href="contacto.html">Contacto</a></li>
       </ul>
     </nav>
-	</header>
-    <section>
-      <h2>POLÍTICA DE CAMBIOS Y DEVOLUCIONES</h2>
-      <h3>NO SE ACEPTAN CAMBIOS O DEVOLUCIONES SI EL PRODUCTO ESTA USADO. SIN EXCEPCION</h3>
-        <ul>
-          <li>Todos nuestros productos tienen cambio. Tenes un plazo máximo de TREINTA (30) días corridos, contados a partir de la fecha de compra. Si necesitas asesoramiento o tenés dudas podes escribirnos a nuestro mail larisma.s@gmail.com.</li>
-          <li>Los cambios solo se realizan por color u otro producto, no realizamos devoluciones de dinero.</li>
-          <li>Los productos de OUTLET no tienen cambio.</li>
-          <li>Si no encontras otro producto para realizar tu cambio, no te preocupes, podemos generarte un cupón por ese monto para que lo uses en un futuro sin fecha de vencimiento.</li>
-          <li>El valor del producto que se tomará para el cambio, será el que pagaste originalmente por el mismo. Si compraste productos con precios promocionales, se tomará el precio que abonaste (no se tomará el precio full del producto).</li>
-        </ul>
-      <h3>¿COMO DEBO HACER PARA CAMBIAR UN PRODUCTO?</h3>
-      <p>Es importante que el producto se entregue en las mismas condiciones en que lo hayas recibido.</p>
-      <p>Envíanos un mail a larisma.s@gmail.com contándonos por qué otro producto te gustaría hacer el cambio o si preferís que te generemos un cupón sin vencimiento.</p>
-      <p>Los gastos del envió corren por cuenta del cliente, salvo que haya sido una falla o error de la orden.</p>
-    </section>
+  </header>
+  <section>
+    <h2>POLÍTICA DE CAMBIOS Y DEVOLUCIONES</h2>
+    <h3>NO SE ACEPTAN CAMBIOS O DEVOLUCIONES SI EL PRODUCTO ESTA USADO. SIN EXCEPCION</h3>
+    <ul>
+      <li>Todos nuestros productos tienen cambio. Tenes un plazo máximo de TREINTA (30) días corridos, contados a partir
+        de la fecha de compra. Si necesitas asesoramiento o tenés dudas podes escribirnos a nuestro mail
+        larisma.s@gmail.com.</li>
+      <li>Los cambios solo se realizan por color u otro producto, no realizamos devoluciones de dinero.</li>
+      <li>Los productos de OUTLET no tienen cambio.</li>
+      <li>Si no encontras otro producto para realizar tu cambio, no te preocupes, podemos generarte un cupón por ese
+        monto para que lo uses en un futuro sin fecha de vencimiento.</li>
+      <li>El valor del producto que se tomará para el cambio, será el que pagaste originalmente por el mismo. Si
+        compraste productos con precios promocionales, se tomará el precio que abonaste (no se tomará el precio full del
+        producto).</li>
+    </ul>
+    <h3>¿COMO DEBO HACER PARA CAMBIAR UN PRODUCTO?</h3>
+    <p>Es importante que el producto se entregue en las mismas condiciones en que lo hayas recibido.</p>
+    <p>Envíanos un mail a larisma.s@gmail.com contándonos por qué otro producto te gustaría hacer el cambio o si
+      preferís que te generemos un cupón sin vencimiento.</p>
+    <p>Los gastos del envió corren por cuenta del cliente, salvo que haya sido una falla o error de la orden.</p>
+  </section>
   <footer>
     <p><img src="img/ig_logo.png" class="logo"> instagram.com/punto.home</p>
     <p><img src="img/wapp_logo.png" class="logo"> (249) 15-4673779</p>
   </footer>
 </body>
-</html>	
+
+</html>
