--- a/index.html
+++ b/index.html
@@ -15,11 +15,10 @@
     <div>
       <img src="img/logo.jpeg" alt="Punto.Home">
     </div>
-    <nav>
-      <ul class="menu">
+    <nav class="menu">
+      <ul>
         <li><a href="index.html">Inicio</a></li>
         <li><a href="qsomos.html">Quienes Somos</a></li>
-        <li><a href="mayorista.html">Venta Mayorista</a></li>
         <li><a href="cambios.html">Política de Cambios y Devoluciones</a></li>
         <li><a href="contacto.html">Contacto</a></li>
       </ul>
@@ -207,6 +206,22 @@
           </ul>
         </td>
         <td>$3900</td>
+      </tr>
+      <tr>
+        <td>
+          <figure>
+            <img src="catalogo/8_1.jpeg" alt="cat8-1">
+            <figcaption>CORTINA DE GASA</figcaption>
+          </figure>
+        </td>
+        <td>
+          <ul>
+            <li>Cortina de baño confeccionada en gasa de algodón blanca, con tiras, mide 1,90 x 2,30 Aprox </li>
+            <li>Realizada de forma artesanal.</li>
+            <li> Pintada sin relieve</li>
+          </ul>
+        </td>
+        <td>$3700</td>
       </tr>
 
     </tbody>
