Agrego foto 8_1 al catálogo y actualizo index.html

--- a/index.html
+++ b/index.html
@@ -208,6 +208,22 @@
         </td>
         <td>$3900</td>
       </tr>
+      <tr>
+        <td>
+          <figure>
+            <img src="catalogo/8_1.jpeg" alt="cat8-1">
+            <figcaption>CORTINA DE GASA</figcaption>
+          </figure>
+        </td>
+        <td>
+          <ul>
+            <li>Cortina de baño confeccionada en gasa de algodón blanca, con tiras, mide 1,90 x 2,30 Aprox </li>
+            <li>Realizada de forma artesanal.</li>
+            <li> Pintada sin relieve</li>
+          </ul>
+        </td>
+        <td>$3700</td>
+      </tr>
 
     </tbody>
   </table>
