Añado foto 8_2 y agrego el producto al index

--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
     <div>
       <img src="img/logo.jpeg" alt="Punto.Home">
     </div>
-    <nav class="menu">
-      <ul>
+    <nav>
+      <ul class="menu">
         <li><a href="index.html">Inicio</a></li>
         <li><a href="qsomos.html">Quienes Somos</a></li>
+        <li><a href="mayorista.html">Venta Mayorista</a></li>
         <li><a href="cambios.html">Política de Cambios y Devoluciones</a></li>
         <li><a href="contacto.html">Contacto</a></li>
       </ul>
@@ -207,6 +208,7 @@
         </td>
         <td>$3900</td>
       </tr>
+
       <tr>
         <td>
           <figure>
@@ -222,6 +224,23 @@
           </ul>
         </td>
         <td>$3700</td>
+      </tr>
+
+      <tr>
+        <td>
+          <figure>
+            <img src="catalogo/8_2.jpeg" alt="cat8-2">
+            <figcaption>CORTINA DE GASA</figcaption>
+          </figure>
+        </td>
+        <td>
+          <ul>
+            <li>Cortina de baño confeccionada en gasa de algodón blanca, con tiras, mide 1,90 x 2,30 Aprox </li>
+            <li>Realizada de forma artesanal.</li>
+            <li> Sin pintar</li>
+          </ul>
+        </td>
+        <td>$3400</td>
       </tr>
 
     </tbody>
