Agrego cambios en index.html y catalogo 11

--- a/index.html
+++ b/index.html
@@ -242,7 +242,22 @@
         </td>
         <td>$3400</td>
       </tr>
-
+      <tr>
+        <td>
+          <figure>
+            <img src="catalogo/11.jpeg" alt="cat11">
+            <figcaption>MANTA DE PIE DE CAMA DE GASA DE ALGODON.</figcaption>
+          </figure>
+        </td>
+        <td>
+          <ul>
+            <li>Medida 1,40 x 2,50 cm. (va perfecto en cama de dos plazas y king). </li>
+            <li> Estampas en relieve, no se le va con el lavado.</li>
+            <li> También se puede usar como manta de sillón.</li>
+          </ul>
+        </td>
+        <td>$3000</td>
+      </tr>
     </tbody>
   </table>
 
