--- a/index.html
+++ b/index.html
@@ -242,6 +242,7 @@
         </td>
         <td>$3400</td>
       </tr>
+
       <tr>
         <td>
           <figure>
@@ -257,6 +258,23 @@
           </ul>
         </td>
         <td>$3000</td>
+      </tr>
+      <tr>
+        <td>
+          <figure>
+            <img src="catalogo/12.jpeg" alt="cat12">
+            <figcaption>Velas de soja aromáticas en frasco BOMBE de vidrio</figcaption>
+          </figure>
+        </td>
+        <td>
+          <ul>
+            <li>Velas 100% naturales.</li>
+            <li>La cera de soja no emite toxicos al aire, es un recurso renovable y no fomenta la industria petroquímica</li>
+            <li>Duran mas tiempo que las velas convencionales y son mas seguras porque su temperatura para quemarse en menor.</li>
+   	    <li>Cortar la mecha cada tanto para promover un consumo perfecto de la cera, y para que el pabilo no ensucie tu vela</li>
+          </ul>
+        </td>
+        <td>$950</td>
       </tr>
     </tbody>
   </table>
