Cambio nombre Qsomos por Quienes.html modifico todos los html

--- a/quienessomos.html
+++ b/quienessomos.html
@@ -16,7 +16,7 @@
     <nav class="menu">
       <ul>
         <li><a href="index.html">Inicio</a></li>
-        <li><a href="qsomos.html">Quienes Somos</a></li>
+        <li><a href="quienessomos.html">Quienes Somos</a></li>
         <li><a href="cambios.html">Política de Cambios y Devoluciones</a></li>
         <li><a href="contacto.html">Contacto</a></li>
       </ul>
